--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.176",
     "babel-jest": "^27.3.1",
     "jest": "^27.3.1",
     "jest-canvas-mock": "^2.3.1",
@@ -19,6 +20,7 @@
     "vite": "^2.6.4"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "material-colors-ts": "^1.0.4",
     "pixi.js": "^6.2.0"
   }
